--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,7 +8,6 @@ on:
       - opened
       - synchronize
       - reopened
-      - closed
 
   push:
     branches:
@@ -20,6 +19,13 @@ permissions:
   pull-requests: write
 
 # --------------------------------
+# 同時実行制御（state ロック事故防止）
+# --------------------------------
+concurrency:
+  group: terraform-main
+  cancel-in-progress: false
+
+# --------------------------------
 # グローバル環境変数
 # --------------------------------
 env:
@@ -27,10 +33,10 @@ env:
   TF_VAR_project: tastylog
   TF_VAR_env: dev
 
-# ==========================================
-# PR 用：Terraform Plan only
-# ==========================================
 jobs:
+  # ==========================================
+  # PR 用：Terraform Plan only（コメント付き）
+  # ==========================================
   terraform-plan:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
@@ -40,16 +46,16 @@ jobs:
 
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v3
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ap-northeast-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
@@ -61,7 +67,13 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -input=false
+        run: |
+          terraform plan -no-color -input=false | tee /tmp/plan.txt
+          {
+            echo "content<<EOF"
+            cat /tmp/plan.txt
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
 
       - name: Comment Plan on PR
         uses: marocchino/sticky-pull-request-comment@v2
@@ -70,13 +82,13 @@ jobs:
           message: |
             ## Terraform Plan Result
 
-            ```
-            ${{ steps.plan.outputs.stdout }}
+            ```hcl
+            ${{ steps.plan.outputs.content }}
             ```
 
-# ==========================================
-# main push 後：Terraform Apply（承認あり）
-# ==========================================
+  # ==========================================
+  # main push 後：Terraform Apply（承認あり）
+  # ==========================================
   terraform-apply:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
@@ -90,21 +102,27 @@ jobs:
 
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v3
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ap-northeast-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
       - name: Terraform Init
         run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan (for log)
+        run: terraform plan -no-color -input=false
 
       - name: Terraform Apply
         run: terraform apply -auto-approve -input=false
